Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog 
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog maestro
                 </span>
             </div>
             <div id="post">
@@ -23,6 +23,7 @@
                         en Youtube. Excepto si eres un rockstar. Pero estadisticamente
                         no lo eres... por ahora.
                     </p>
+                    <p>Suscribete y dale un like</p>
             </div>
         </div>
     </body>
